# rust-rocket-upload-image-s3

./: Cargo.toml
src/: main.rs
