[package]
name = "rust-upload-image"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc", features = ["json"] } # Use the latest stable version available
aws-sdk-s3 = "1.45"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv="0.15"
aws-config = "1.5.5"
tokio = { version = "1.39.3", features = ["full"] }
